main
====
Tables, support for "text indexes":
    - classes `TableTextIndexDefinition` and `TableTextIndexOptions` (e.g. for `list_indexes()` method)
Tables, introduced method `list_indexes()`
Cursors (all types): introduced the "pagination API":
    - `.fetch_next_page()` method
    - `initial_page_state` cursor constructor parameter / builder interface method
Admin, renamed 'region_name' ==> `name` in `AstraDBAdminDatabaseRegionInfo` and `AstraDBAvailableRegionInfo` (the old name kept as a deprecated alias)
Introduced the notion of 'passthrough columns' to cover all of the cql-only partially/completely unsupported columns in the read/schema-read path
Fix: methods `drop_[collection|table]` of `[Async]Database`, and their Collection/Table sugar methods, now consistently return None.
AstraDBAdmin: introduced `[async_]find_available_regions()` method (and related response objects)
embedding/reranking models' "API support status":
    - db admins' `.find_[embedding|reranking]_providers()` methods have a `filter_model_status` parameter;
    - returned `*Model` objects have an appropriate "API Support" attribute.
allow sending `"$vector": None` when inserting into collections
support for modelSupport in findRerankingProviders
CollectionDefinition fluent interface: set_lexical and set_rerank accept also just 'enabled'
find_and_rerank scores' type enlarged to: `float|int|null`
maintenance: switched to uv (from poetry)
maintenance: promoted findAndRerank testing to the 'regular' IT (adjusted readme and env templates accordingly)
maintenance: pin h11 to 0.16.0 or higher (after a vulnerability report)
maintenance: switch to latest HCD for non-Astra CI github action
maintenance: introduce CQL-driven testing for low/no-support table columns. `LOCAL_DATA_API_APPLICATION_TOKEN` local test auth not supported anymore.

v 2.0.1
=======
bugfix: receiving `'$vector': null` caused response parsing to break

v 2.0.0
=======