@@ -31,6 +31,8 @@ from astrapy.info import (
     TableKeyValuedColumnTypeDescriptor,
     TablePrimaryKeyDescriptor,
     TableScalarColumnTypeDescriptor,
+    TableTextIndexDefinition,
+    TableTextIndexOptions,
     TableValuedColumnTypeDescriptor,
     TableVectorColumnTypeDescriptor,
     TableVectorIndexDefinition,
@@ -569,5 +571,87 @@ class TestTableLifecycle:
             await atable.database.drop_table_index("idx_t_map_text_int_e")
             await atable.database.drop_table_index("idx_t_map_text_int_k")
             await atable.database.drop_table_index("idx_t_map_text_int_v")
+        finally:
+            await atable.drop()
+
+    @pytest.mark.describe("test of text indexes, async")
+    async def test_table_textindexes_async(
+        self,
+        async_database: AsyncDatabase,
+    ) -> None:
+        table_textidx_def = CreateTableDefinition(
+            columns={
+                "id": TableScalarColumnTypeDescriptor(column_type="text"),
+                "txt_d": TableScalarColumnTypeDescriptor(column_type="text"),
+                "txt_s": TableScalarColumnTypeDescriptor(column_type="text"),
+                "txt_l": TableScalarColumnTypeDescriptor(column_type="text"),
+            },
+            primary_key=TablePrimaryKeyDescriptor(
+                partition_by=["id"],
+                partition_sort={},
+            ),
+        )
+        atable = await async_database.create_table(
+            "table_textindexes",
+            definition=table_textidx_def,
+        )
+
+        try:
+            # create, list and drop various analyzer text-column indexes
+            tx_id_opts_s = TableTextIndexOptions(analyzer="whitespace")
+            tx_id_opts_l = TableTextIndexOptions(
+                analyzer={
+                    "tokenizer": {"name": "standard", "args": {}},
+                    "filters": [
+                        {"name": "lowercase"},
+                        {"name": "stop"},
+                        {"name": "porterstem"},
+                        {"name": "asciifolding"},
+                    ],
+                    "charFilters": [],
+                },
+            )
+            await atable.create_text_index("idx_txt_d", "txt_d")
+            await atable.create_text_index("idx_txt_s", "txt_s", options=tx_id_opts_s)
+            await atable.create_text_index("idx_txt_l", "txt_l", options=tx_id_opts_l)
+
+            listed_indexes = sorted(
+                await atable.list_indexes(),
+                key=lambda idx_desc: idx_desc.name,
+            )
+            expected_indexes = sorted(
+                [
+                    TableIndexDescriptor(
+                        name="idx_txt_d",
+                        definition=TableTextIndexDefinition(
+                            column="txt_d",
+                            options=TableTextIndexOptions(analyzer="standard"),
+                        ),
+                        index_type=TableIndexType.TEXT,
+                    ),
+                    TableIndexDescriptor(
+                        name="idx_txt_s",
+                        definition=TableTextIndexDefinition(
+                            column="txt_s",
+                            options=tx_id_opts_s,
+                        ),
+                        index_type=TableIndexType.TEXT,
+                    ),
+                    TableIndexDescriptor(
+                        name="idx_txt_l",
+                        definition=TableTextIndexDefinition(
+                            column="txt_l",
+                            options=tx_id_opts_l,
+                        ),
+                        index_type=TableIndexType.TEXT,
+                    ),
+                ],
+                key=lambda idx_desc: idx_desc.name,
+            )
+            assert listed_indexes == expected_indexes
+
+            await atable.database.drop_table_index("idx_txt_d")
+            await atable.database.drop_table_index("idx_txt_s")
+            await atable.database.drop_table_index("idx_txt_l")
         finally:
             await atable.drop()
